--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input {
+  height: 30px;
+  border:none;
+  border-radius: 3px;
+  background-color: bisque;
+  padding: 4px;
+}
+
+button{
+  border-radius: 3px;
+  background-color: grey;
+  color:brown;
+  border:none;
+  height: 35px;
+  margin-left: 10px;
 }
